--- a/static/css/change_pw.css
+++ b/static/css/change_pw.css
@@ -1,4 +1,4 @@
-main {
+#change-pw {
   width: 100%;
   height: auto;
   display: flex;
@@ -10,7 +10,8 @@ main {
 }
 
 #change-pw__container {
-  width: 50rem;
+  width: 100%;
+  /* width: 50rem; */
   height: auto;
   display: flex;
   flex-direction: row;
@@ -111,4 +112,101 @@ main .pw-input__container {
   background-color: blue;
   color: #fff;
   font-weight: 900;
+}
+
+@media screen and (max-width:1023px) {
+  /* 타블렛 가로 */
+}
+
+@media screen and (max-width: 767px) {
+  /* 타블렛 세로, 모바일 가로 */
+}
+
+@media screen and (max-width: 479px) {
+  /* 모바일 세로 */
+  main .pw-input__container {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+    font-size: 2rem;
+    font-weight: 900;
+    font-size: 0.5rem;
+  }
+
+  .pw-input__container p {
+    width: 24rem;
+    font-size: 1rem;
+    font-weight: normal;
+    color: #000;
+    margin-bottom: 0.5rem;
+  }
+  
+  .input__cur__pw input {
+    width: 24rem;
+    height: 3.3rem;
+    border-radius: 0.5rem;
+    margin-bottom: 2rem;
+    padding-left: 1rem;
+    font-size: 1rem;
+    border: 1px solid #8c8c8c;
+  }
+  
+  .input__new__pw input {
+    width: 24rem;
+    height: 3.3rem;
+    border-radius: 0.5rem;
+    margin-bottom: 1rem;
+    padding-left: 1rem;
+    font-size: 1rem;
+    border: 1px solid #8c8c8c;
+  }
+  
+  .input__new__pw2 input {
+    width: 24rem;
+    height: 3.3rem;
+    border-radius: 0.5rem;
+    margin-bottom: 1rem;
+    padding-left: 1rem;
+    font-size: 1rem;
+    border: 1px solid #8c8c8c;
+  }
+  
+  #change__btn__container {
+    width: 24rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  
+  #cancel-pw__btn {
+    cursor: pointer;
+    margin-top: 2rem;
+    margin-bottom: 5rem;
+    width: 7rem;
+    height: 3rem;
+    outline: 0;
+    border: 0;
+    font-size: 1rem;
+    border-radius: 0.5rem;
+    background-color: #bfbfbf;
+    color: #fff;
+    font-weight: 900;
+  }
+  
+  #change-pw__btn {
+    cursor: pointer;
+    margin-top: 2rem;
+    margin-bottom: 5rem;
+    width: 16rem;
+    height: 3rem;
+    outline: 0;
+    border: 0;
+    font-size: 1rem;
+    border-radius: 0.5rem;
+    background-color: blue;
+    color: #fff;
+    font-weight: 900;
+  }
 }
