--- a/static/css/profile_edit.css
+++ b/static/css/profile_edit.css
@@ -1,4 +1,4 @@
-main {
+#profile-edit {
   width: 100%;
   height: auto;
   display: flex;
@@ -10,7 +10,8 @@ main {
 }
 
 #profile-edit__container {
-  width: 50rem;
+  /* width: 50rem; */
+  width: 100%;
   height: auto;
   display: flex;
   flex-direction: row;
@@ -20,7 +21,7 @@ main {
 }
 
 #profile-edit__container .profile-edit__title {
-  width: 50rem;
+  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -143,7 +144,7 @@ main {
   right: 1rem;
 }
 
-.input__edit__birthday {
+.input__edit__birthday input {
   width: 30rem;
   height: 3.3rem;
   border-radius: 0.5rem;
@@ -390,6 +391,7 @@ main {
   height: 12rem;
   position: relative;
   padding: 10px;
+  margin-top: 30rem;
 }
 
 #cf__modal .modal-close {
@@ -468,4 +470,472 @@ main {
   flex-direction: row;
   justify-content: center;
   align-items: center;
+}
+
+@media screen and (max-width:1023px) {
+  /* 타블렛 가로 */
+}
+
+@media screen and (max-width: 767px) {
+  /* 타블렛 세로, 모바일 가로 */
+}
+
+@media screen and (max-width: 479px) {
+  /* 모바일 세로 */
+  #profile-edit {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+    font-family: "Noto Sans", "Noto Sans KR";
+    margin-top: 8rem;
+  }
+  
+  #profile-edit__container {
+    /* width: 50rem; */
+    width: 25rem;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+    font-size: 1rem;
+  }
+  
+  #profile-edit__container .profile-edit__title {
+    width: 25rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+    font-size: 1.5rem;
+    font-weight: 900;
+    margin-bottom: 5rem;
+  }
+  
+  #profile-edit__container p {
+    font-size: 1rem;
+    font-weight: normal;
+    color: #000;
+    margin-bottom: 1rem;
+  }
+
+  #profile__edit__form {
+    width: 30rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+  }
+
+  .input__edit__name {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+
+  .input__edit__name p {
+    width: 24rem;
+  }
+  
+  .input__edit__name input {
+    width: 24rem;
+    height: 3.3rem;
+    border-radius: 0.5rem;
+    margin-bottom: 2rem;
+    padding-left: 1rem;
+    font-size: 1rem;
+    border: 1px solid #8c8c8c;
+  }
+
+  .input__edit__nickname {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+
+  .input__edit__nickname p {
+    width: 24rem;
+  }
+  
+  .input__edit__nickname input {
+    width: 24rem;
+    height: 3.3rem;
+    border-radius: 0.5rem;
+    margin-bottom: 2rem;
+    padding-left: 1rem;
+    font-size: 1rem;
+    border: 1px solid #8c8c8c;
+  }
+  
+  .input__edit__profile_img {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+
+  .input__edit__profile_img p {
+    width: 24rem;
+  }
+
+  .input__edit__profile_img input {
+    display: none;
+  }
+  
+  #input__img__container {
+    width: 13rem;
+    height: 13rem;
+    border: 1px solid rgb(200, 200, 200);
+    border-radius: 13rem;
+    background-color: rgb(250, 250, 250);
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-top: 2rem;
+    margin-bottom: 3rem;
+    position: relative;
+  }
+  
+  #input__img__container img {
+    position: absolute;
+    object-fit: cover;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 13rem;
+  }
+  
+  #camera__img {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 3.4rem;
+    height: 3.4rem;
+    padding-left: .25rem;
+    border-radius: 2rem;
+    border: 1px solid rgb(200, 200, 200);
+    background-color: #fff;
+    position: absolute;
+    right: 0rem;
+    bottom: 0rem;
+  }
+
+  .input__edit__gender {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+
+  .input__edit__gender p {
+    width: 24rem;
+  }
+  
+  .input__edit__gender select {
+    width: 24rem;
+    height: 3.3rem;
+    border-radius: 0.5rem;
+    margin-bottom: 2rem;
+    padding-left: 1rem;
+    font-size: 1rem;
+    border: 1px solid #8c8c8c;
+    appearance: none;
+  }
+  
+  .input__edit__gender {
+    position: relative;
+  }
+  
+  .input__edit__gender .edit__angle-down {
+    position: absolute;
+    top: 3.2rem;
+    right: 1.5rem;
+  }
+
+  .input__edit__job {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+
+  .input__edit__job p {
+    width: 24rem;
+  }
+  
+  .input__edit__job select {
+    width: 24rem;
+    height: 3.3rem;
+    border-radius: 0.5rem;
+    margin-bottom: 2rem;
+    padding-left: 1rem;
+    font-size: 1rem;
+    border: 1px solid #8c8c8c;
+    appearance: none;
+  }
+  
+  .input__edit__job {
+    position: relative;
+  }
+  
+  .input__edit__job .edit__angle-down {
+    position: absolute;
+    top: 3.2rem;
+    right: 1.5rem;
+  }
+  
+  .input__edit__birthday {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+
+  .input__edit__birthday p {
+    width: 24rem;
+  }
+
+  .input__edit__birthday input {
+    width: 24rem;
+    height: 3.3rem;
+    border-radius: 0.5rem;
+    margin-bottom: 2rem;
+    padding-left: 1rem;
+    font-size: 1rem;
+    border: 1px solid #8c8c8c;
+  }
+
+  .input__edit__desc {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+
+  .input__edit__desc p {
+    width: 24rem;
+  }
+
+  .input__edit__desc textarea {
+    width: 24rem;
+    height: 10rem;
+    border-radius: 0.5rem;
+    margin-bottom: 2rem;
+    padding: 1rem;
+    font-size: 1rem;
+    border: 1px solid #8c8c8c;
+  }
+
+  .input__edit__email {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+
+  .input__edit__email p {
+    width: 24rem;
+  }
+  
+  .input__edit__email input {
+    width: 24rem;
+    height: 3.3rem;
+    border-radius: 0.5rem;
+    margin-bottom: 3rem;
+    padding-left: 1rem;
+    font-size: 1rem;
+    border: 1px solid #8c8c8c;
+  }
+  
+  .change-pw__btn {
+    cursor: pointer;
+    width: 6rem;
+    height: 2.4rem;
+    border-radius: 0.3rem;
+    border: 1px solid #8c8c8c;
+    margin-bottom: 2rem;
+    font-size: 1rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  #signout__btn {
+    cursor: pointer;
+    width: 6rem;
+    height: 2.4rem;
+    border-radius: 0.3rem;
+    border: 1px solid #8c8c8c;
+    margin-bottom: 3rem;
+    font-size: 1rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  #edit__btn__container {
+    width: 24rem;
+    margin-bottom: 3rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  
+  .edit-cancel__btn {
+    cursor: pointer;
+    width: 6rem;
+    height: 3rem;
+    outline: 0;
+    border: 0;
+    font-size: 1rem;
+    border-radius: 0.5rem;
+    background-color: #bfbfbf;
+    color: #fff;
+    font-weight: 900;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  #edit-cf__btn {
+    cursor: pointer;
+    width: 16rem;
+    height: 3rem;
+    outline: 0;
+    border: 0;
+    font-size: 1rem;
+    border-radius: 0.5rem;
+    background-color: #2253ff;
+    color: #fff;
+    font-weight: 900;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  /* edit-confirm 모달 */
+  /* edit-confirm 모달 */
+  /* edit-confirm 모달 */
+  #cf__modal.modal-overlay {
+    display: none;
+    width: 100%;
+    height: 300%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: rgba(103, 99, 99, 0.25);
+    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(1.5px);
+    -webkit-backdrop-filter: blur(1.5px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
+  }
+  
+  #cf__modal .modal__window {
+    background: #fff;
+    box-shadow: 0 8px 32px 0 rgba(16, 18, 42, 0.37);
+    backdrop-filter: blur(13.5px);
+    -webkit-backdrop-filter: blur(13.5px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    width: 25rem;
+    height: 12rem;
+    position: relative;
+    padding: 10px;
+    margin-top: 50rem;
+  }
+  
+  #cf__modal .modal-close {
+    display: inline;
+    float: right;
+    padding-right: 8px;
+    cursor: pointer;
+    color: black;
+    font-size: 1.5rem;
+  }
+  
+  #cf__modal .modal__content p {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 1.5rem;
+    flex-wrap: wrap;
+    padding: 0px 10px;
+    color: black;
+    font-size: 1rem;
+    line-height: 1rem;
+    margin-left: 1rem;
+  }
+  
+  #cf__modal .modal__content a {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 0px 10px;
+    font-size: 1rem;
+    line-height: 1rem;
+  }
+  
+  #cf__modal__btns {
+    width: 20rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-top: 2rem;
+    margin-left: 0.5rem;
+  }
+  
+  #edit-cc__btn {
+    cursor: pointer;
+    width: 6rem;
+    height: 3rem;
+    outline: 0;
+    border: 0;
+    font-size: 1rem;
+    border-radius: 0.5rem;
+    background-color: #bfbfbf;
+    color: #fff;
+    font-weight: 900;
+    margin-left: 3rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-right: 1rem;
+  }
+  
+  #cf__modal__btn {
+    cursor: pointer;
+    width: 10rem;
+    height: 3rem;
+    outline: 0;
+    border: 0;
+    font-size: 1rem;
+    border-radius: 0.5rem;
+    background-color: #2253ff;
+    color: #fff;
+    font-weight: 900;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
 }
