--- a/static/css/signout.css
+++ b/static/css/signout.css
@@ -11,7 +11,7 @@ main {
 
 #signout__cf__modal.modal-overlay {
   width: 100%;
-  height: 110%;
+  height: 130%;
   position: absolute;
   left: 0;
   top: 0;
@@ -114,4 +114,104 @@ main {
   flex-direction: row;
   justify-content: center;
   align-items: center;
+}
+
+@media screen and (max-width:1023px) {
+  /* 타블렛 가로 */
+}
+
+@media screen and (max-width: 767px) {
+  /* 타블렛 세로, 모바일 가로 */
+}
+
+@media screen and (max-width: 479px) {
+  /* 모바일 세로 */
+  #signout__cf__modal .modal__window {
+    background: #fff;
+    box-shadow: 0 8px 32px 0 rgba(16, 18, 42, 0.37);
+    backdrop-filter: blur(13.5px);
+    -webkit-backdrop-filter: blur(13.5px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    width: 25rem;
+    height: 15rem;
+    position: relative;
+    padding: 10px;
+  }
+  
+  #signout__cf__modal .modal-close {
+    display: inline;
+    float: right;
+    padding-right: 10px;
+    cursor: pointer;
+    color: black;
+    font-size: 1.5rem;
+  }
+  
+  #signout__cf__modal .modal__content p {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 1.5rem;
+    flex-wrap: wrap;
+    text-align: center;
+    padding: 0px 10px;
+    color: black;
+    font-size: 1rem;
+    line-height: 1.3rem;
+  }
+  
+  #signout__cf__modal .modal__content a {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 0px 10px;
+    font-size: 1rem;
+    line-height: 1rem;
+  }
+  
+  #signout__modal__btns {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-top: 1rem;
+  }
+  
+  #signout-cc__btn {
+    cursor: pointer;
+    width: 9rem;
+    height: 3rem;
+    outline: 0;
+    border: 0;
+    font-size: 1rem;
+    border-radius: 0.5rem;
+    background-color: #bfbfbf;
+    color: #fff;
+    font-weight: 900;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin: 0 1rem 0 0;
+  }
+  
+  #signout-cf__btn {
+    cursor: pointer;
+    width: 10rem;
+    height: 3rem;
+    outline: 0;
+    border: 0;
+    font-size: 1rem;
+    border-radius: 0.5rem;
+    background-color: red;
+    color: #fff;
+    font-weight: 900;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
 }
