--- a/users/templates/users/change_pw.html
+++ b/users/templates/users/change_pw.html
@@ -1,5 +1,5 @@
 {% extends 'users/base.html' %} {% block content %}
-<main>
+<main id="change-pw">
 	<form method="POST" action="{% url 'users:change_pw' %}">
 		{% csrf_token %}
 		<div id="change-pw__container">
@@ -8,18 +8,25 @@
 				<div class="change-pw__input">
 					<div class="input__cur__pw">
 						{{ form.old_password.errors }}
-						<lable for="{{ form.old_password.id_for_label }}"><p>현재 비밀번호</p></lable>
-						<input type="password" name="old_password" autocomplete="current-password" autofocus="" required="" id="id_old_password" placeholder="현재 비밀번호" />
+						<lable for="{{ form.old_password.id_for_label }}">
+							<p>현재 비밀번호</p>
+						</lable>
+						<input type="password" name="old_password" autocomplete="current-password" autofocus=""
+							required="" id="id_old_password" placeholder="현재 비밀번호" />
 					</div>
 					<div class="input__new__pw">
 						{{ form.new_password1.errors }}
-						<lable for="{{ form.new_password1.id_for_label }}"><p>새 비밀번호</p></lable>
-						<input type="password" name="new_password1" autocomplete="new-password" required="" id="id_new_password1" placeholder="새 비밀번호" />
+						<lable for="{{ form.new_password1.id_for_label }}">
+							<p>새 비밀번호</p>
+						</lable>
+						<input type="password" name="new_password1" autocomplete="new-password" required=""
+							id="id_new_password1" placeholder="새 비밀번호" />
 					</div>
 					<div class="input__new__pw2">
 						{{ form.new_password2.errors }}
 						<lable for="{{ form.new_password2.id_for_label }}"></lable>
-						<input type="password" name="new_password2" autocomplete="new-password" required="" id="id_new_password2" placeholder="새 비밀번호 확인" />
+						<input type="password" name="new_password2" autocomplete="new-password" required=""
+							id="id_new_password2" placeholder="새 비밀번호 확인" />
 					</div>
 					<div id="change__btn__container">
 						<button onclick="backtoProfile()" id="cancel-pw__btn">취소</button>
