--- a/users/templates/users/profile_edit.html
+++ b/users/templates/users/profile_edit.html
@@ -1,156 +1,157 @@
 {% extends 'users/base.html' %} {% block content %}
 {% load static %}
-<main>
-  <div id="profile-edit__container">
-    <span class="profile-edit__title">프로필 수정</span>
-    <form method="post" action="{% url 'users:profile_edit' id %}" enctype="multipart/form-data" onkeyPress="if (event.keyCode==13){return false;}">
-      {% csrf_token %}
-        <div class="input__edit__name">
-            {{ form.name.errors }}
-            <lable for="{{ form.name.id_for_label }}"><p>이름</p></lable>
-            <input
-            type="text"
-            name="name"
-            value="{{user.name}}"
-            maxlength="10"
-            required=""
-            id="id_name"
-            placeholder="이름을 입력하세요."
-            />
-            <input type="text" style="display: none;" />
-        </div>
-        <div class="input__edit__nickname">
-            {{ form.nickname.errors }}
-            <lable for="{{ form.nickname.id_for_label }}"><p>닉네임</p></lable>
-            <input
-            type="text"
-            name="nickname"
-            value="{{user.nickname}}"
-            maxlength="10"
-            required=""
-            id="id_nickname"
-            placeholder="새 닉네임을 입력하세요."
-            />
-        </div>
-        <div class="input__edit__profile_img">
-            {{ form.profile_img.errors }}
-            <lable for="{{ form.profile_img.id_for_label }}"
-            ><p>
-                프로필 사진&nbsp;<span style="color: #8c8c8c; font-size: 1rem; font-weight: 100;">(선택)</span><br /><p style="color: #8c8c8c; font-size: 0.5rem"
-                >*업로드 하지 않으면 MOCO에서 제공하는 기본 프로필 사진이
-                적용됩니다.</p>
-            </p></lable
-            >
-            <input
-            type="file"
-            name="profile_img"
-            accept="image/*"
-            id="id_profile_img"
-            onchange="thumbnailImg(event);"
-            ></input>
-            <label for="id_profile_img">
-                <div id="input__img__container">
-                    {% if user.profile_img %}
-                    <img src="{{user.profile_img.url}}" alt="profile_img"></img>
-                    {% else %}
-                    <img src="{% static 'img/moco_symbol.png' %}" alt="profile_img"></img>
-                    {% endif %}
-                    <div id="camera__img">
-                        <i class="fa-solid fa-camera fa-2xl"></i>
+<main id="profile-edit">
+    <div id="profile-edit__container">
+        <span class="profile-edit__title">프로필 수정</span>
+        <form method="post" action="{% url 'users:profile_edit' id %}" enctype="multipart/form-data"
+            onkeyPress="if (event.keyCode==13){return false;}">
+            {% csrf_token %}
+            <!-- <div id="profile__edit__form"> -->
+            <div class="input__edit__name">
+                {{ form.name.errors }}
+                <lable for="{{ form.name.id_for_label }}">
+                    <p>이름</p>
+                </lable>
+                <input type="text" name="name" value="{{user.name}}" maxlength="10" required="" id="id_name"
+                    placeholder="이름을 입력하세요." />
+                <input type="text" style="display: none;" />
+            </div>
+            <div class="input__edit__nickname">
+                {{ form.nickname.errors }}
+                <lable for="{{ form.nickname.id_for_label }}">
+                    <p>닉네임</p>
+                </lable>
+                <input type="text" name="nickname" value="{{user.nickname}}" maxlength="10" required="" id="id_nickname"
+                    placeholder="새 닉네임을 입력하세요." />
+            </div>
+            <div class="input__edit__profile_img">
+                {{ form.profile_img.errors }}
+                <lable for="{{ form.profile_img.id_for_label }}">
+                    <p>
+                        프로필 사진&nbsp;<span style="color: #8c8c8c; font-size: 1rem; font-weight: 100;">(선택)</span><br />
+                    <p style="color: #8c8c8c; font-size: 0.5rem">*업로드 하지 않으면 MOCO에서 제공하는 기본 프로필 사진이
+                        적용됩니다.</p>
+                    </p>
+                </lable>
+                <input type="file" name="profile_img" accept="image/*" id="id_profile_img"
+                    onchange="thumbnailImg(event);"></input>
+                <label for="id_profile_img">
+                    <div id="input__img__container">
+                        {% if user.profile_img %}
+                        <img src="{{user.profile_img.url}}" alt="profile_img"></img>
+                        {% else %}
+                        <img src="{% static 'img/moco_symbol.png' %}" alt="profile_img"></img>
+                        {% endif %}
+                        <div id="camera__img">
+                            <i class="fa-solid fa-camera fa-2xl"></i>
+                        </div>
                     </div>
+                </label>
+            </div>
+            <div class="input__edit__gender">
+                {{ form.gender.errors }}
+                <lable for="{{ form.gender.id_for_label }}">
+                    <p>성별</p>
+                </lable>
+                <div class="edit__angle-down"><i class="fa-solid fa-angle-down"></i></div>
+                {{form.gender}}
+            </div>
+            <div class="input__edit__job">
+                {{ form.job.errors }}
+                <lable for="{{ form.job.id_for_label }}">
+                    <p>직업</p>
+                </lable>
+                <div class="edit__angle-down"><i class="fa-solid fa-angle-down"></i></div>
+                {{form.job}}
+            </div>
+            <div class="input__edit__birthday">
+                {{ form.birth.errors }}
+                <lable for="{{ form.birth.id_for_label }}">
+                    <p>생년월일</p>
+                </lable>
+                <input type="text" name="birth" value="{{user.birth}}" required="" id="id_birth"
+                    placeholder="YYYY-MM-DD 형식으로 적어주세요.">
+            </div>
+            <div class="input__edit__desc">
+                {{ form.desc.errors }}
+                <lable for="{{ form.desc.id_for_label }}">
+                    <p>자기소개&nbsp;<span style="color: #8c8c8c">(선택)</span></p>
+                </lable>
+                <textarea name="desc" cols="40" rows="10" maxlength="100" id="id_desc"
+                    placeholder="100자 이내로 입력해주세요.">{{user.desc}}</textarea>
+            </div>
+            <div class="input__edit__email">
+                {{ form.email.errors }}
+                {% if messages %}
+                {% for message in messages %}
+                <input type="hidden" value="{{ message.message }}" id="dup_email">
+                {% endfor %}
+                {% endif %}
+                <lable for="{{ form.email.id_for_label }}">
+                    <p>이메일</p>
+                </lable>
+                <input type="email" name="email" value="{{user.email}}" maxlength="254" required="" id="id_email"
+                    placeholder="이메일 형식에 맞추어 적어주세요.">
+            </div>
+            <div>
+                <p>비밀번호 변경</p>
+                <div class="change-pw__btn">
+                    <a onclick="changePw()"><span>바로가기</span></a>
                 </div>
-            </label>
-        </div>
-        <div class="input__edit__gender">
-            {{ form.gender.errors }}
-            <lable for="{{ form.gender.id_for_label }}"><p>성별</p></lable>
-            <div class="edit__angle-down"><i class="fa-solid fa-angle-down"></i></div>
-            {{form.gender}}
-        </div>
-        <div class="input__edit__job">
-            {{ form.job.errors }}
-            <lable for="{{ form.job.id_for_label }}"><p>직업</p></lable>
-            <div class="edit__angle-down"><i class="fa-solid fa-angle-down"></i></div>
-            {{form.job}}
-        </div>
-        <div>
-            {{ form.birth.errors }}
-            <lable for="{{ form.birth.id_for_label }}"><p>생년월일</p></lable>
-            <input class="input__edit__birthday" type="text" name="birth" value="{{user.birth}}" required="" id="id_birth" placeholder="YYYY-MM-DD 형식으로 적어주세요.">
-        </div>
-        <div class="input__edit__desc">
-            {{ form.desc.errors }}
-            <lable for="{{ form.desc.id_for_label }}"><p>자기소개&nbsp;<span style="color: #8c8c8c">(선택)</span></p></lable>
-            <textarea name="desc" cols="40" rows="10" maxlength="100" id="id_desc" placeholder="100자 이내로 입력해주세요.">{{user.desc}}</textarea>
-        </div>
-        <div class="input__edit__email">
-            {{ form.email.errors }}
-            {% if messages %}
-            {% for message in messages %}
-            <input type="hidden" value="{{ message.message }}" id="dup_email">
-            {% endfor %}
-            {% endif %}
-            <lable for="{{ form.email.id_for_label }}"><p>이메일</p></lable>
-            <input type="email" name="email" value="{{user.email}}" maxlength="254" required="" id="id_email" placeholder="이메일 형식에 맞추어 적어주세요.">
-        </div>
-        <div>
-            <p>비밀번호 변경</p>
-            <div class="change-pw__btn">
-                <a onclick="changePw()"><span>바로가기</span></a>
             </div>
-        </div>
-        <div>
-            <p>회원탈퇴</p>
-            <div id="signout__btn">
-                <a href="{% url 'users:signout' %}"><span style="color: red;">회원탈퇴</span></a>
+            <div>
+                <p>회원탈퇴</p>
+                <div id="signout__btn">
+                    <a href="{% url 'users:signout' %}"><span style="color: red;">회원탈퇴</span></a>
+                </div>
             </div>
-        </div>
-        <div id="edit__btn__container">
-            <div class="edit-cancel__btn">
-                <a onclick="editCancel()">취소</a>
-            </div>
-            <div id="edit-cf__btn">
-                <a onclick="editConfirm()">수정 완료</a>
-            </div>
-            <!-- 수정확인 모달 -->
-            <div id="cf__modal" class="modal-overlay" style="display: none;">
-                <div class="modal__window">
-                    <div class="modal-close"><i class="fa-solid fa-xmark"></i></div>
-                    <div class="modal__content">
-                        <p style="margin-top:3rem; font-size: 1.3rem; font-weight: 900">프로필 수정 사항을 저장할까요?</p>
-                        <div id="cf__modal__btns">
-                            <div id="edit-cc__btn">
-                                <a href="">아니요</a>
+            <!-- </div> -->
+            <div id="edit__btn__container">
+                <div class="edit-cancel__btn">
+                    <a onclick="editCancel()">취소</a>
+                </div>
+                <div id="edit-cf__btn">
+                    <a onclick="editConfirm()">수정 완료</a>
+                </div>
+                <!-- 수정확인 모달 -->
+                <div id="cf__modal" class="modal-overlay" style="display: none;">
+                    <div class="modal__window">
+                        <div class="modal-close"><i class="fa-solid fa-xmark"></i></div>
+                        <div class="modal__content">
+                            <p style="margin-top:3rem; font-size: 1.3rem; font-weight: 900">프로필 수정 사항을 저장할까요?</p>
+                            <div id="cf__modal__btns">
+                                <div id="edit-cc__btn">
+                                    <a href="">아니요</a>
+                                </div>
+                                <button id="cf__modal__btn" onclick="submitCf()" type="submit">저장</button>
                             </div>
-                            <button id="cf__modal__btn" onclick="submitCf()" type="submit">저장</button>
-                        </div>  
+                        </div>
                     </div>
                 </div>
+                <!-- 수정확인 모달 -->
             </div>
-            <!-- 수정확인 모달 -->
-        </div>
-    </form>
-  </div>
+        </form>
+    </div>
 </main>
 <script>
     //수정 취소
     function editCancel() {
-        location.href="{% url 'users:profile_view' user.id %}"
+        location.href = "{% url 'users:profile_view' user.id %}"
     }
 
     // 비밀번호 변경으로 바로 가기
     function changePw() {
-        location.href="{% url 'users:change_pw' %}"
+        location.href = "{% url 'users:change_pw' %}"
     }
 
     // 프로필 이미지 미리보기
     function thumbnailImg(event) {
         var reader = new FileReader();
 
-        reader.onload = function(event) {
-          var img = document.createElement("img");
-          img.setAttribute("src", event.target.result);
-          document.querySelector("div#input__img__container").appendChild(img);
+        reader.onload = function (event) {
+            var img = document.createElement("img");
+            img.setAttribute("src", event.target.result);
+            document.querySelector("div#input__img__container").appendChild(img);
         };
 
         reader.readAsDataURL(event.target.files[0]);
@@ -158,7 +159,7 @@
 
     //회원탈퇴 confirm 
     function signoutCf() {
-        location.href="{% url 'users:signout' %}"
+        location.href = "{% url 'users:signout' %}"
     }
 
     //유효성 검증
@@ -178,7 +179,7 @@
         if (!unameCheck.test(uname.value)) {
             alert("이름은 10자 이내의 한글로 작성해주세요.");
             uname.focus();
-            location.href="{% url 'users:profile_edit' user.id %}"
+            location.href = "{% url 'users:profile_edit' user.id %}"
             return false;
         }
 
@@ -222,7 +223,7 @@
 
     cfmodal.addEventListener("click", e => {
         const evTarget = e.target
-        if(evTarget.classList.contains("modal-overlay")) {
+        if (evTarget.classList.contains("modal-overlay")) {
             cfmodal.style.display = "none"
         }
     })
